Added Accordion file for Location updating

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,5 +1,6 @@
-<div class="nav px-4 bg-primary navbar-dark">
-  <h1 class="text-light ml-6 display-md-3">
+<div class="nav p-4 bg-primary navbar-dark">
+  <h1 class="text-light ml-6 col display-md-3">
     <%= North.root.station[0].name %>
   </h1>
+ <%- include('button'); -%>
 </div>
