--- a/views/ninteenth.ejs
+++ b/views/ninteenth.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -13,12 +14,20 @@
 
   <body>
     <%- include('header'); -%>
-
     <div class="container">
       <div class="row m-3">
-        <%- include('north'); -%> 
-        <%- include('south'); -%>
+        <%- include('north'); -%> <%- include('south'); -%>
       </div>
     </div>
   </body>
+  <script
+    src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+    crossorigin="anonymous"
+  ></script>
+
+  <script
+    type="text/javascript"
+    src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+  ></script>
 </html>
