--- a/views/button.ejs
+++ b/views/button.ejs
@@ -1,10 +1,10 @@
 <p>
-  <button class="btn btn-dark m-3" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-    City
-  </button>
+  <div class="min3 col p-3 bg-warning border-dark border border-rounded text-primary text-center rounded col type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+   <h1 class="responsive-text">City</h1>
+  </div>
 </p>
 <div class="collapse" id="collapseExample">
-  <div class="card card-body">
+  <div class="card p-0 card-body">
     <%- include('accordion'); -%>
   </div>
 </div>
