--- a/views/ninteenth.ejs
+++ b/views/ninteenth.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -15,10 +15,11 @@
   <body>
     <%- include('header'); -%>
     <div class="container">
-      <div class="row m-3">
+      <div class="row">
         <%- include('north'); -%> <%- include('south'); -%>
       </div>
     </div>
+    <%- include('footer'); -%>
   </body>
   <script
     src="https://code.jquery.com/jquery-3.4.1.min.js"
