--- a/views/north.ejs
+++ b/views/north.ejs
@@ -1,6 +1,6 @@
 <% for (var i = 0; i < North.root.station[0].etd.length; i++) { %>
-<div class="col-md-5 m-1 rounded bg-dark text-light">
-
+<div class="col-md-5 m-1 rounded bg-warning text-light">
+  North
   <h1>
     <span class="text-primary">
       <%= North.root.station[0].etd[i].destination %></span
