--- a/views/south.ejs
+++ b/views/south.ejs
@@ -1,14 +1,15 @@
 <% for (var i = 0; i < South.root.station[0].etd.length; i++) { %>
-<div class="col-md-5 rounded m-1 bg-dark text-light">
+  <div class="col-md-5 m-1 rounded bg-primary text-light">
 
+  South
   <h1>
-    <span class="text-primary">
+    <span class="text-warning">
       <%= South.root.station[0].etd[i].destination %></span
     >
   </h1>
   <h2>
     in:
-    <span class="text-primary">
+    <span class="text-warning">
       <% for ( J = 0; J < South.root.station[0].etd[i].estimate.length; J++) {
       %> <%= South.root.station[0].etd[i].estimate[J].minutes %> <% if ( J <
         South.root.station[0].etd[i].estimate.length-1){ %> , <% } %> <% } %>
