Finished for now! Deploying

--- a/views/accordion.ejs
+++ b/views/accordion.ejs
@@ -449,89 +449,113 @@
         aria-label="Btn-Group"
       >
         <button
-          onclick="location.href='19th'"
+          onclick="location.href='bayf'"
           type="button"
           class="btn btn-dark"
           value="19th"
         >
-          19th Street
+          Bay Fair Mall
         </button>
         <button
-          onclick="location.href='12th'"
+          onclick="location.href='cast'"
           type="button"
           class="btn btn-dark"
           value="12th"
         >
-          12th Street
+          Castro Valley
         </button>
         <button
-          onclick="location.href='lake'"
+          onclick="location.href='dubl'"
           type="button"
           class="btn btn-dark"
           value="lake"
         >
-          Lake Meritt
+         Dublin / Pleasanton
         </button>
 
         <button
-          onclick="location.href='woak'"
+          onclick="location.href='frmt'"
           type="button"
           class="btn btn-dark"
           value="woak"
         >
-          West Oakland
+          Fremont
         </button>
         <button
-          onclick="location.href='cols'"
+          onclick="location.href='hayw'"
           type="button"
           class="btn btn-dark"
           value="cols"
         >
-          Coliseum
+          Hayward
         </button>
-      </div>
-      <!-- Half of Form Group -->
-      <div
-        class="btn-group-vertical ml-1 flex-fill btn-group-lg"
-        role="group"
-        aria-label="Btn-Group"
-      >
         <button
-          onclick="location.href='ftvl'"
-          type="button"
-          class="btn btn-dark"
-          value="ftvl"
+        onclick="location.href='phil'"
+        type="button"
+        class="btn btn-dark"
+        value="ftvl"
         >
-          Fruitvale
-        </button>
+        Pleasant Hill
+      </button>
+      
+    </div>
+
+    <div
+      class="btn-group-vertical ml-1 flex-fill btn-group-lg"
+      role="group"
+      aria-label="Btn-Group"
+    >
 
         <button
-          onclick="location.href=' mcar '"
+          onclick="location.href='sanl'"
           type="button"
           class="btn btn-dark"
           value="mcar"
         >
-          MacArthur
+          San Leandro
         </button>
 
         <button
-          onclick="location.href=' cols '"
+          onclick="location.href='shay'"
           type="button"
           class="btn btn-dark"
           value="cols"
         >
-          Coliseum
+          South Hayward
         </button>
         <button
-          onclick="location.href=' rock '"
+          onclick="location.href='ucty'"
           type="button"
           class="btn btn-dark"
           value="rock"
         >
-          Rockridge
+          Union City
+        </button>
+        <button
+          onclick="location.href='warm'"
+          type="button"
+          class="btn btn-dark"
+          value="rock"
+        >
+          Warm Springs South Fremont
+        </button>
+        <button
+          onclick="location.href='wcrk'"
+          type="button"
+          class="btn btn-dark"
+          value="rock"
+        >
+          Walnut Creek
+        </button>
+        <button
+          onclick="location.href='wdub'"
+          type="button"
+          class="btn btn-dark"
+          value="rock"
+        >
+          West Dublin
         </button>
       </div>
     </div>
   </div>
-</div>
 </div>
