--- a/views/north.ejs
+++ b/views/north.ejs
@@ -1,3 +1,6 @@
+<% if (North.root.station[0].etd == "undefined") { %> <%- include('afterHours');
+-%> <%}%> 
+
 <% for (var i = 0; i < North.root.station[0].etd.length; i++) { %>
 <div class="col-md-5 m-1 rounded bg-warning text-light">
   North
