Removing Service map tag until drawing is designed and complete

--- a/views/accordion.ejs
+++ b/views/accordion.ejs
@@ -1,31 +1,7 @@
 <div class="accordion" id="citySelector">
-  <!-- MAP -->
+  <!-- %- include('serviceMap');  -->
+  
 
-  <div class="card">
-    <button
-      class="btn bg-warning rounded card-header collapsed"
-      type="button"
-      id="headingMap"
-      data-toggle="collapse"
-      data-target="#collapseMap"
-      aria-expanded="true"
-      aria-controls="collapseMap"
-    >
-      <h1>Service Map</h1>
-    </button>
-
-    <div
-      id="collapseMap"
-      class="show"
-      aria-labelledby="headingMap"
-      data-parent="#citySelector"
-    >
-      <div class="card-body  bg-secondary">
-        800x350 WebP Image
-      </div>
-    </div>
-  </div>
-</div>
 
 <!-- Oakland -->
 
@@ -49,7 +25,7 @@
     aria-labelledby="headingOne"
     data-parent="#citySelector"
   >
-    <div class="card-body bg-secondary d-flex">
+    <div class="card-body d-flex">
       <div
         class="btn-group-lg flex-fill btn-group-vertical"
         role="group"
@@ -162,7 +138,7 @@
     aria-labelledby="headingTwo"
     data-parent="#citySelector"
   >
-    <div class="card-body d-flex bg-secondary">
+    <div class="card-body d-flex">
       <div
         class="btn-group-lg flex-fill btn-group-vertical"
         role="group"
@@ -291,7 +267,7 @@
     aria-labelledby="headingThree"
     data-parent="#citySelector"
   >
-    <div class="card-body d-flex bg-secondary">
+    <div class="card-body d-flex">
       <div 
       class="btn-group-lg flex-fill btn-group-vertical"
       role="group"
@@ -442,7 +418,7 @@
     aria-labelledby="headingFour"
     data-parent="#citySelector"
   >
-    <div class="card-body bg-secondary d-flex">
+    <div class="card-body d-flex">
       <div
         class="btn-group-lg flex-fill btn-group-vertical"
         role="group"
