--- a/views/ninteenth.ejs
+++ b/views/ninteenth.ejs
@@ -22,7 +22,7 @@
 
         <% if (North.root.station[0].etd) { %> 
           <%- include('north'); -%> 
-          <%-vinclude('south'); -%>
+          <%- include('south'); -%>
       <% } -%>
       </div>
     </div>
