--- a/views/south.ejs
+++ b/views/south.ejs
@@ -10,9 +10,11 @@
   <h2>
     in:
     <span class="text-warning">
-      <% for ( J = 0; J < South.root.station[0].etd[i].estimate.length; J++) {
-      %> <%= South.root.station[0].etd[i].estimate[J].minutes %> <% if ( J <
-        South.root.station[0].etd[i].estimate.length-1){ %> , <% } %> <% } %>
+      <% for ( J = 0; J < South.root.station[0].etd[i].estimate.length; J++) {%> 
+        <%= South.root.station[0].etd[i].estimate[J].minutes %> 
+        <% if ( J < South.root.station[0].etd[i].estimate.length-1){ %>  
+          <% } %> 
+          <% } %>
       </span>
     </h2>
   </h2>
