Beautified for Mobile

--- a/views/accordion.ejs
+++ b/views/accordion.ejs
@@ -134,7 +134,7 @@
 
   <div
     id="collapseTwo"
-    class="btn-group-lg collapse btn-group-vertical"
+    class="collapse"
     aria-labelledby="headingTwo"
     data-parent="#citySelector"
   >
@@ -146,102 +146,103 @@
       >
         <button
           onclick="location.href=' 16th '"
-          class="m-1 btn btn-dark"
+          class=" btn btn-dark"
           value="16th"
         >
           16th Street Mission
         </button>
         <button
           onclick="location.href=' 24th '"
-          class="m-1 btn btn-dark"
+          class=" btn btn-dark"
           value="24th"
         >
           24th Street Mission
         </button>
         <button
           onclick="location.href=' balb '"
-          class="m-1 btn btn-dark"
+          class=" btn btn-dark"
           value="balb"
         >
           Balboa Park
         </button>
         <button
           onclick="location.href=' civc '"
-          class="m-1 btn btn-dark"
+          class=" btn btn-dark"
           value="civc"
         >
           Civic Center
         </button>
         <button
           onclick="location.href=' colm '"
-          class="m-1 btn btn-dark"
+          class=" btn btn-dark"
           value="colm"
         >
           Colma
         </button>
         <button
           onclick="location.href=' daly '"
-          class="m-1 btn btn-dark"
+          class=" btn btn-dark"
           value="daly"
         >
           Daly City
         </button>
       </div>
+      <!-- Half Of Form Group -->
       <div
-        class="btn-group-lg btn-group ml-1 flex-fill btn-group-vertical"
+        class="btn-group-lg ml-1 flex-fill btn-group-vertical"
         role="group"
         aria-label="Btn-Group"
       >
         <button
           onclick="location.href=' embr '"
-          class="m-1 btn btn-dark"
+          class=" btn btn-dark"
           value="embr"
         >
           Embarcadero
         </button>
         <button
           onclick="location.href=' glen '"
-          class="m-1 btn btn-dark"
+          class=" btn btn-dark"
           value="glen"
         >
           Glen Park
         </button>
         <button
           onclick="location.href=' mlbr '"
-          class="m-1 btn btn-dark"
+          class=" btn btn-dark"
           value="mlbr"
         >
           Milbrae
         </button>
         <button
           onclick="location.href=' mont '"
-          class="m-1 btn btn-dark"
+          class=" btn btn-dark"
           value="mont"
         >
           Montgomery
         </button>
         <button
           onclick="location.href=' sfia '"
-          class="m-1 btn btn-dark"
+          class=" btn btn-dark"
           value="sfia"
         >
           Sfo Airport
         </button>
         <button
           onclick="location.href=' ssan '"
-          class="m-1 btn btn-dark"
+          class=" btn btn-dark"
           value="ssan"
         >
           South San Francisco
         </button>
-      </div>
-      <button
+        <button
         onclick="location.href=' sbrn  '"
-        class="m-1 btn btn-dark"
+        class=" btn btn-dark"
         value="sbrn"
-      >
+        >
         San Bruno
       </button>
+    </div>
     </div>
   </div>
 </div>
@@ -275,42 +276,42 @@
       >
           <button
             onclick="location.href='ashb'"
-            class="m-1 btn btn-dark"
+            class=" btn btn-dark"
             value="16th"
           >
             Ashby
           </button>
           <button
             onclick="location.href='antc'"
-            class="m-1 btn btn-dark"
+            class=" btn btn-dark"
             value="24th"
           >
             Antioch
           </button>
           <button
             onclick="location.href='conc'"
-            class="m-1 btn btn-dark"
+            class=" btn btn-dark"
             value="balb"
           >
             Concord
           </button>
           <button
             onclick="location.href='dbrk'"
-            class="m-1 btn btn-dark"
+            class=" btn btn-dark"
             value="civc"
           >
             Downtown Berkeley
           </button>
           <button
             onclick="location.href='deln'"
-            class="m-1 btn btn-dark"
+            class=" btn btn-dark"
             value="colm"
           >
             El Corrito del Norte
           </button>
           <button
             onclick="location.href='plza'"
-            class="m-1 btn btn-dark"
+            class=" btn btn-dark"
             value="daly"
           >
             El Corrito Plaza
@@ -318,7 +319,7 @@
 
           <button
             onclick="location.href='lafy'"
-            class="m-1 btn btn-dark"
+            class=" btn btn-dark"
             value="embr"
           >
             Lafayette
@@ -331,21 +332,21 @@
         >
           <button
             onclick="location.href='Milpitas'"
-            class="m-1 btn btn-dark"
+            class=" btn btn-dark"
             value="glen"
           >
             Milpitas
           </button>
           <button
             onclick="location.href='nbrk'"
-            class="m-1 btn btn-dark"
+            class=" btn btn-dark"
             value="mont"
           >
             North Berkeley
           </button>
           <button
             onclick="location.href='ncon'"
-            class="m-1 btn btn-dark"
+            class=" btn btn-dark"
             value="mlbr"
           >
             North Concord / Martinez
@@ -353,7 +354,7 @@
           <button
             onclick="location.href='orin'"
             type="button"
-            class="m-1 btn btn-dark"
+            class=" btn btn-dark"
             value="sfia"
           >
             Orinda
@@ -361,7 +362,7 @@
           <button
             onclick="location.href=' pitt '"
             type="button"
-            class="m-1 btn btn-dark"
+            class=" btn btn-dark"
             value="ssan"
           >
             Pittsburg/ Bay Point
@@ -369,7 +370,7 @@
           <button
             onclick="location.href='pctr'"
             type="button"
-            class="m-1 btn btn-block btn-dark"
+            class=" btn btn-block btn-dark"
             value="sbrn"
           >
             Pittsburg Center
@@ -377,7 +378,7 @@
           <button  
           onclick="location.href='phil'"
           type="button"
-            class="m-1 btn btn-block btn-dark"
+            class=" btn btn-block btn-dark"
             value="sbrn"
           >
             Pleasant Hill
@@ -385,7 +386,7 @@
           <button
             onclick="location.href='rich'"
             type="button"
-            class="m-1 btn btn-block btn-dark"
+            class=" btn btn-block btn-dark"
             value="sbrn"
           >
             Richmond
