--- a/views/afterHours.ejs
+++ b/views/afterHours.ejs
@@ -1,1 +1,2 @@
-<h1>Hey there! You have reached us after hours, one or more of the trains have stopped service so this service no longer works</h1>
+<h1>Hey there! You have reached us after hours, one or more of the trains have stopped service thus this service no longer works</h1>
+<h1>I will be updating this site to fix this issue but if one train in either direction you seek has no data the logic crashes. Stay tuned.</h1>
