--- a/views/button.ejs
+++ b/views/button.ejs
@@ -1,6 +1,6 @@
 <p>
-  <div class="min3 col p-3 bg-warning border-dark border border-rounded text-primary text-center rounded col type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-   <h1 class="responsive-text">City</h1>
+  <div class="min3 col p-2 bg-warning border-dark border border-rounded text-primary text-center rounded col type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+   <h1 class="responsive-text"><%= North.root.station[0].name %></h1>
   </div>
 </p>
 <div class="collapse" id="collapseExample">
