--- a/views/south.ejs
+++ b/views/south.ejs
@@ -13,10 +13,10 @@
       <% for ( J = 0; J < South.root.station[0].etd[i].estimate.length; J++) {%> 
         <%= South.root.station[0].etd[i].estimate[J].minutes %> 
         <% if ( J < South.root.station[0].etd[i].estimate.length-1){ %>  
-          <% } %> 
+         , <% } %> 
           <% } %>
       </span>
-    </h2>
+    Minutes</h2>
   </h2>
 </div>
 <% } %>
