--- a/views/ninteenth.ejs
+++ b/views/ninteenth.ejs
@@ -16,16 +16,21 @@
     <%- include('header'); -%>
     <div class="container">
       <div class="row">
+
         <% if (!North.root.station[0].etd) { %> 
-          <h1>No Northbound Trains at this Time</h1>
+          <div class="col-md-5 m-1 rounded bg-warning text-primary">
+            <h1 class="p-2" >
+              No Northbound Trains at this Time</h1>
+          </div>
            <%}%> 
         <% if (!South.root.station[0].etd) { %> 
-        <h1>No Southbound Trains at this Time</h1>
-        
+          <div class="col-md-5 m-1 rounded bg-primary text-light">
+            <h1 class="p-2" >
+              No Southbound Trains at this Time</h1>
+          </div>
           <%}%> 
 
           <% if (!South.root.station[0].etd && !North.root.station[0].etd) { %> 
-            <h1>No Southbound Trains at this Time</h1>
             <%-include('afterHours'); %>
               <%}%> 
         <% if (North.root.station[0].etd) { %> 
