--- a/views/accordion.ejs
+++ b/views/accordion.ejs
@@ -1,8 +1,8 @@
 <div class="accordion" id="citySelector">
+
+  <!-- PLaceholder for adding in a Map once ive designed it -->
   <!-- %- include('serviceMap');  -->
   
-
-
 <!-- Oakland -->
 
 <div class="card">
