--- a/views/ninteenth.ejs
+++ b/views/ninteenth.ejs
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     />
-    <title>Document</title>
+    <title>Bart Warrior</title>
   </head>
 
   <body>
@@ -17,12 +17,15 @@
     <div class="container">
       <div class="row">
 
+<!-- Edge Case, if the Api has no data within these parameters for north and or south individually, it used to break the logic -->
+
         <% if (!North.root.station[0].etd) { %> 
           <div class="col-md-5 m-1 rounded bg-warning text-primary">
             <h1 class="p-2" >
               No Northbound Trains at this Time</h1>
           </div>
            <%}%> 
+
         <% if (!South.root.station[0].etd) { %> 
           <div class="col-md-5 m-1 rounded bg-primary text-light">
             <h1 class="p-2" >
@@ -30,12 +33,18 @@
           </div>
           <%}%> 
 
+ <!-- Edge Case, if no times are listed, bart is not running in this station -->
+
           <% if (!South.root.station[0].etd && !North.root.station[0].etd) { %> 
             <%-include('afterHours'); %>
               <%}%> 
+
+            <!-- Northbound Module  -->
         <% if (North.root.station[0].etd) { %> 
           <%- include('north'); -%> 
           <% } -%>
+          
+          <!-- SouthBound Module -->
         <% if (South.root.station[0].etd) { %> 
           <%- include('south'); -%>
           <% } -%>
