--- a/views/north.ejs
+++ b/views/north.ejs
@@ -1,5 +1,6 @@
-<% if (North.root.station[0].etd == "undefined") { %> <%- include('afterHours');
--%> <%}%> 
+<% if (North.root.station[0].etd == "undefined") { %> 
+  <%- include('afterHours'); -%> 
+  <%}%> 
 
 <% for (var i = 0; i < North.root.station[0].etd.length; i++) { %>
 <div class="col-md-5 m-1 rounded bg-warning text-light">
@@ -13,6 +14,7 @@
     in:
     <span class="text-primary">
       <% for ( J = 0; J < North.root.station[0].etd[i].estimate.length; J++) {%> 
+        <!-- Inserts Commas between but not after each instance of "minutes" -->
         <%= North.root.station[0].etd[i].estimate[J].minutes %> 
         <% if ( J < North.root.station[0].etd[i].estimate.length-1){ %> , 
           <% } %>
