Fixed bug, dont implement a catch all route when passing parameters.

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,1 +1,1 @@
-<a href="https://www.linkedin.com/in/zackarybrown30/">Developers LinkedIn</a>
+<a class="unstyled m-3 text-light" href="https://www.linkedin.com/in/zackarybrown30/">Developers LinkedIn</a>
