Removing FAVICON error and placing API timeout error catch route

--- a/views/accordion.ejs
+++ b/views/accordion.ejs
@@ -331,7 +331,7 @@
           aria-label="Btn-Group"
         >
           <button
-            onclick="location.href='Milpitas'"
+            onclick="location.href='mlpt'"
             class=" btn btn-dark"
             value="glen"
           >
