--- a/baggate.ejs
+++ b/baggate.ejs
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     />
+    <link rel="icon" type="image/x-icon" href="/static/BartIcon.png">
     <title>Bart Warrior</title>
   </head>
 
