--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,1 +1,1 @@
-<a class="unstyled m-3 text-light" href="https://www.linkedin.com/in/zackarybrown30/">Developers LinkedIn</a>
+<footer class="unstyled m-3 text-light" href="https://www.linkedin.com/in/zackarybrown30/">Developers LinkedIn</footer>
