--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,8 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     />
+    <link rel="icon" type="img/png" src="/static/BartIcon.png">
+
     <title>Bart Warrior</title>
   </head>
 
@@ -52,6 +54,7 @@
 
       </div>
     </div>
+    <%- include('subscribe'); -%>
     <%- include('footer'); -%>
   </body>
   <script
