--- a/views/subscribe.ejs
+++ b/views/subscribe.ejs
@@ -1,59 +1,122 @@
 <div id="accordion">
-    <div class="card bg-primary text-center">
+    <div class="card text-center">
     <div class="card-header bg-warning nav row m-3 text-center navbar-light" id="subscriptionBox">
         <button class="btn text-primary text-center mx-auto" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
-        <h1>Get Notified</h1>
+        <h1>Schedule Alerts</h1>
         </button>
         </div>
-    <div id="collapseThree" class="collapse show" aria-labelledby="subscriptionBox" data-parent="#accordion">
-      <p class="text-warning text-center"> We can notify you the trains' arrival times on a scheduled basis </p>
-        <form class="card-body text-white btn btn-link collapsed" data-toggle="collapse" data-parent="accordion">
-        </div>
-        <div class="form-group row">
-            <label class="col">Text MSG</label>
-            <input 
-            type="tel" 
-            placeholder="Phone"
-            class="col"
-            aria-label="Phone Number Input">
-            <input 
-            type="checkbox"
-            class="form-control-lg col">
-        </div>
-            <!-- If checkbox is clicked, suppply Phone Inupt -->
-        <div class="form-control form-control-lg">
-            <div class="form-group">
-                <input type="hidden" 
-                info="can we submit the currently active station times and simply ask them if they want north or south?" > 
-                <input type="email"
-                placeholder="@">
-                <input type="checkbox">
+    <div 
+    id="collapseThree" 
+    class="collapse show" 
+    aria-labelledby="subscriptionBox" 
+    data-parent="#accordion">
+        <p class="text-primary text-center"> 
+        We can send your dialy boarding information to you so you never get surprised again by a late train </p>
+        <form 
+        class="card-body btn btn-link collapsed" data-toggle="collapse" 
+        data-parent="accordion">
+            
+            <table class="table table-striped">
+                <tr>
+                    <th>Day</th>
+                    <th>Time</th>
+                </tr>
+                <tr>
+                    <td>Monday</td>
+                    <td>
+                        <input type="time" name="" id="">
+                        <input type="hidden" value="Monday">
+
+                    </td>
+                </tr>
+                <tr>
+                    <td>Tuesday</td>
+                    <td>
+                        <input type="time" name="" id="">
+                        <input type="hidden" value="Tuesday">
+
+                    </td>
+                </tr>
+                <tr>
+                    <td>Wednesay</td>
+                    <td>
+                        <input type="time" name="" id="">
+                        <input type="hidden" value="Wednesay">
+                    </td>
+                </tr>
+                <tr>
+                    <td>Thursday</td>
+                    <td>
+                        <input type="time" name="" id="">
+                        <input type="hidden" value="Thursday">
+
+                    </td>
+                </tr>
+                <tr>
+                    <td>Friday</td>
+                    <td>
+                        <input type="time" name="" id="">
+                        <input type="hidden" value="Friday">
+                    </td>
+                </tr>
+                <tr>
+                    <td>Saturday</td>
+                    <td>
+                        <input type="time" name="" id="">
+                        <input type="hidden" value="Saturday">
+                    </td>
+                </tr>
+                <tr>
+                    <td>Sunday</td>
+                    <td>
+                        <input type="time" value="" name="" id="">
+                        <input type="hidden" value="Sunday">
+                    </td>
+                </tr>
+            </table>
             </div>
             <br>
-            <label>Mon</label>
-            <input type="checkbox">
-            <label>Tue</label>
-            <input type="checkbox">
-            <label>Wed</label>
-            <input type="checkbox">
-            <label>Thu</label>
-            <input type="checkbox">
-            <label>Fri</label>
-            <input type="checkbox">
-            <label>Sat</label>
-            <input type="checkbox">
-            <label>Sun</label>
-            <input type="checkbox">
-            <input type="time">
-            <button>Add another ?</button> 
+            <div class="form-group">
+            <div class="form-check form-switch">
+                <label 
+                class="text-primary" 
+                for="phoneSwitch">Text Notification</label>
+                <!-- <input 
+                class="form-check-input" 
+                type="checkbox" 
+                role="switch" 
+                id="phoneSwitch"> -->
+                <input 
+                type="tel" 
+                placeholder="Phone #" 
+                aria-label="Phone number input for scheduled notifications">
+            </div>
+            <br>
+            <div class="form-check form-switch" >
+                <label 
+                class="form-check-label text-primary" 
+                for="emailSwitch">
+                Email Notification</label>
+                <!-- <input 
+                class="form-check-input" 
+                type="checkbox" 
+                role="switch" 
+                id="emailSwitch"
+                data-toggle="disable"
+                data-target="emailInput"> -->
+                <input 
+                type="email"
+                id="emailInput"
+                placeholder="@"
+                aria-label="Email input for scheduled notifications">
+            </div>
+        </div>
             <!-- Make the date, time module an EJS file and call it if the user clicks the button -->
             </select>
-            <div class="row">
-            <button class="bg-primary text-warning col" type="submit">North</button>
-            <button class="bg-warning text-primary col" type="submit">South</button>
-            </div>
-    
-
-
+           
+            <p class="display-4 col">From <%= North.root.station[0].name %></p>
+            <button class="bg-primary text-warning " type="submit">North</button>
+            <button class="bg-warning text-primary " type="submit">South</button>
     </div>
   </div>
+</div>
