--- a/views/subscribe.ejs
+++ b/views/subscribe.ejs
@@ -1,28 +1,34 @@
 <div id="accordion">
     <div class="card text-center">
-    <div class="card-header bg-warning nav row m-3 text-center navbar-light" id="subscriptionBox">
+    <div class="card-header bg-warning row m-3 text-center
+    " id="subscriptionBox">
         <button class="btn text-primary text-center mx-auto" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
         <h1>Schedule Alerts</h1>
         </button>
-        </div>
+        </div class="container">
     <div 
     id="collapseThree" 
-    class="collapse show" 
+    class="collapse" 
     aria-labelledby="subscriptionBox" 
     data-parent="#accordion">
         <p class="text-primary text-center"> 
-        We can send your dialy boarding information to you so you never get surprised again by a late train </p>
+        We can send your dialy boarding information to you so you never get surprised by a late train again</p>
+        <fieldset>
+            <legend>This</legend>
         <form 
-        class="card-body btn btn-link collapsed" data-toggle="collapse" 
+        class="card-body btn collapsed" data-toggle="collapse" 
         data-parent="accordion">
             
-            <table class="table table-striped">
+            <table class="table table-bordered">
+                <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">Day</th>
+                        <th scope="col">Time</th>
+                    </tr>
+            </thead>
+            <tbody>
                 <tr>
-                    <th>Day</th>
-                    <th>Time</th>
-                </tr>
-                <tr>
-                    <td>Monday</td>
+                    <td scope="row">Monday</td>
                     <td>
                         <input type="time" name="" id="">
                         <input type="hidden" value="Monday">
@@ -30,7 +36,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Tuesday</td>
+                    <td scope="row">Tuesday</td>
                     <td>
                         <input type="time" name="" id="">
                         <input type="hidden" value="Tuesday">
@@ -38,14 +44,14 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Wednesay</td>
+                    <td scope="row">Wednesay</td>
                     <td>
                         <input type="time" name="" id="">
                         <input type="hidden" value="Wednesay">
                     </td>
                 </tr>
                 <tr>
-                    <td>Thursday</td>
+                    <td scope="row">Thursday</td>
                     <td>
                         <input type="time" name="" id="">
                         <input type="hidden" value="Thursday">
@@ -53,70 +59,81 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Friday</td>
+                    <td scope="row">Friday</td>
                     <td>
                         <input type="time" name="" id="">
                         <input type="hidden" value="Friday">
                     </td>
                 </tr>
                 <tr>
-                    <td>Saturday</td>
+                    <td scope="row">Saturday</td>
                     <td>
                         <input type="time" name="" id="">
                         <input type="hidden" value="Saturday">
                     </td>
                 </tr>
                 <tr>
-                    <td>Sunday</td>
+                    <td scope="row">Sunday</td>
                     <td>
                         <input type="time" value="" name="" id="">
                         <input type="hidden" value="Sunday">
                     </td>
                 </tr>
+            </tbody>
             </table>
-            </div>
             <br>
+        </select>
             <div class="form-group">
-            <div class="form-check form-switch">
-                <label 
-                class="text-primary" 
-                for="phoneSwitch">Text Notification</label>
-                <!-- <input 
-                class="form-check-input" 
-                type="checkbox" 
-                role="switch" 
-                id="phoneSwitch"> -->
-                <input 
-                type="tel" 
-                placeholder="Phone #" 
-                aria-label="Phone number input for scheduled notifications">
+                <div class="form-check">
+                    <label 
+                    class="text-primary">
+                    Text Notification</label>
+                    <!-- <input 
+                        class="form-check-input" 
+                        type="checkbox" 
+                        role="switch" 
+                        id="phoneSwitch"> -->
+                        <input 
+                        type="tel" 
+                        placeholder="Phone #" 
+                        aria-label="Phone number input for scheduled notifications">
+                    </div>
+                    <br>
+                    <div class="" >
+                        <label 
+                        class="form-check-label text-primary" id="emailInput">
+                        Email Notification</label>
+                            <input 
+                            type="email"
+                            aria-describedby="emailInput"
+                            placeholder="@"
+                            aria-label="Email">
+                        </div>
+                    <br>
+                    <div class="">
+                    <label
+                    class="input-group-prepend text-primary"
+                    id="Station-Label"
+                    >Station </label>
+                    <input 
+                    class=""
+                    type="search" 
+                    placeholder="<%= North.root.station[0].name %>"
+                    aria-label="Station"
+                    aria-describedby="Station-Label">
+                </div>
+                </div>
+                    <!-- <p class="display-4 col">From <%= North.root.station[0].name %></p> -->
+                    <br>
+                <button 
+                class="bg-primary text-warning " type="submit">
+                North</button>
+                <button 
+                class="bg-warning text-primary " type="submit">
+                South</button>
             </div>
-            <br>
-            <div class="form-check form-switch" >
-                <label 
-                class="form-check-label text-primary" 
-                for="emailSwitch">
-                Email Notification</label>
-                <!-- <input 
-                class="form-check-input" 
-                type="checkbox" 
-                role="switch" 
-                id="emailSwitch"
-                data-toggle="disable"
-                data-target="emailInput"> -->
-                <input 
-                type="email"
-                id="emailInput"
-                placeholder="@"
-                aria-label="Email input for scheduled notifications">
+        </fieldset>
+            </form>
             </div>
         </div>
-            <!-- Make the date, time module an EJS file and call it if the user clicks the button -->
-            </select>
-           
-            <p class="display-4 col">From <%= North.root.station[0].name %></p>
-            <button class="bg-primary text-warning " type="submit">North</button>
-            <button class="bg-warning text-primary " type="submit">South</button>
-    </div>
-  </div>
 </div>
